# miata-dash

./: .gitmodules  Pifile  README.md  build.sh  config.json  flash.sh  image.Pifile  openauto.sh  qemu.sh  setup-debian.sh  setup.sh
.github/workflows/: build.yml  release.yml  test.yml
board/rpi3/: post-build.sh
config-overrides/: config.txt  defconfig  rpi2  users.txt
configs/: rpi3_defconfig
dash/: Cargo.toml
dash/src/: android_auto.rs  main.rs  music.rs  settings.rs
dash/src/music/: player.rs
dash/ui/: custom-components.slint  main.slint
dash/ui/music/: player.slint
dash/ui/pages/: android_auto.slint  android_auto_page.slint  home_page.slint  music.slint  music_page.slint  pages.slint  settings.slint  settings_page.slint
src/boot/firmware/: userconf.txt
src/etc/sudoers.d/: 50-racer
src/etc/systemd/system/: dash.service  startup.service
src/etc/systemd/system/getty@tty1.service.d/: autologin.conf
src/home/: start.sh
src/home/car/: .xinitrc
src/home/driver/: .bash_profile
src/home/etc/init.d/: S99dash
src/home/racer/: start.sh
src/root/: start.sh
src/storage/: boot.sh  settings.conf
