[package]
name = "rusty-dash"
version = "0.0.7"
edition = "2024"

[dependencies]
slint = { version = "1.16.1", features = ["backend-linuxkms"] }
# android-auto = {version = "0.3.7", features = ["usb","wireless"] }
android-auto = { version = "0.3.8", features = ["usb"] }
system_shutdown = "4.1.0"

[build-dependencies]
slint-build = "1.16.1"
